--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,13 +37,8 @@ jobs:
            method: kubeconfig
            kubeconfig: '{{secrets.KUBECONFIG}}'
            context: default
-      - uses: jtalk/k8s-deploy@v2
+      - uses: azure/k8s-deploy@v4
         with:
           namespace: 'default'
           manifests: |
-            dir/manifests
-#            manifests/deploy.yaml
-#            manifests/service.yaml
-#            manifests/ingress.yaml
-          images: '$DOCKER_USERNAME/$DOCKER_REPO:latest'
-          kubectl-version: 'latest'
+             manifests
