--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,6 +40,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: azure/k8s-deploy@v4
         with:
-          namespace: 'default'
+          action: deploy
           manifests: |
              manifests
