--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: azure/setup-kubectl@v3
       - uses: azure/k8s-set-context@v3
         with:
-           kubeconfig: '{{secrets.KUBECONFIG}}'
+          kubeconfig: ${{ secrets.KUBECONFIG }}
       - uses: azure/k8s-deploy@v4
         with:
           action: deploy
