--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -9,7 +9,7 @@ env:
   DOCKER_USERNAME: '${{secrets.DOCKER_USERNAME}}'
   DOCKER_PASSWORD: '${{secrets.DOCKER_PASSWORD}}'
   DOCKER_REPO: '${{secrets.DOCKER_REPO}}'
-  KUBECONFIG: ${{secrets.KUBECONFIG}}
+  KUBECONFIG: '${{secrets.KUBECONFIG}}'
 
 jobs:
   create-user-image:
