--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,8 +33,8 @@ jobs:
         uses: azure/k8s-set-context@v3
         with:
           method: service-account
-          k8s-url: "$KUBERNETES_URL"
-          k8s-secret: "$KUBERNETES_SECRET"
+          k8s-url: ${{secrets.KUBERNETES_URL}}
+          k8s-secret: ${{secrets.KUBERNETES_SECRET}}
       - uses: actions/checkout@v2
       - uses: azure/k8s-deploy@v4
         with:
